@@ -129,6 +129,7 @@ Version 1.3-svn:
    * --validcache runtime switch to force assumption that cache is valid
    * add two new debug command set_var and show_var to check variables within
      the game easily
+   * better handling of SDL_ListModes return code (no user impact)
 
 Version 1.2:
  * campaigns:
